# signed-with-quantum

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  TeamName.txt  main.py  pyproject.toml  requirements.txt  rm-rf | *.txt  test_implementation.py
backend/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  test_implementation_with_image.py
frontend/: README.md  app.json  package-lock.json  package.json
frontend/.expo-shared/: assets.json
frontend/app/: ApiConfigScreen.tsx  LibraryScreen.tsx  MediaScreen.tsx  PreviewScreen.tsx  _layout.tsx  index.tsx
prism/: README.md  app.json  package-lock.json  package.json
prism/app/: MediaScreen.tsx  PermissionsScreen.tsx  PreviewScreen.tsx  _layout.tsx  index.tsx
prism/components/: Button.tsx  ExposureControl.tsx  ZoomControls.tsx
